# GradeUp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  creds  d.json  docker-compose.yaml  init.sql  init_profiles.sql  pyproject.toml  requirements.txt
app/: .env  alembic.ini  config.py  exceptions.py  main.py
app/actions/: create_superuser.py
app/api/: __init__.py  admin.py  auth.py  categories.py  decorators.py  department.py  divisions.py  evaluations.py  levels.py  meetings.py  profiles.py  questions.py  roles.py  skill.py  stages.py  user.py  user_profiles.py  user_skills.py
app/api/auth/: dao.py  router.py  schemas.py  tokens.py  utils.py
app/api/organization/: __init__.py  department.py  (+1 more)
app/auth/: __init__.py  dao.py  dependencies.py  models.py  router.py  schemas.py  tokens.py  utils.py
app/core/: .env  config.py  log.py
app/db/: __init__.py  base.py  database.py  db_helper.py  uow.py
app/dependencies/: __init__.py  auth.py  auth_dependencies.py  uow.py
app/exceptions/: common.py  user.py
app/migrations/: env.py
app/models/: __init__.py  profiles.py  user_profiles.py  users.py
app/profiles/: dao.py  models.py  router.py
app/schemas/: categories.py  departments.py  evaluations.py  event.py  meetings.py  profiles.py  questions.py  skills.py  user_profile.py  user_progress.py  users.py
app/services/: __init__.py  access.py  base.py  categories.py  department.py  event.py  level.py  meetings.py  profile.py  questions.py  skill.py  stages.py  user.py  user_profile.py  user_progress.py  user_stage.py
app/utils/: __init__.py  auth.py
(+117 files in other folders)
